[project]
name = "stemmabench"
version = "0.0"
description = "Package for benching stemmatology algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }

dependencies = [
  "loguru==0.6.0",
  "pydantic==1.9.1",
  "PyYAML==6.0",
  "typer==0.4.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mypkg = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov[all]"]
