[project]
name = "stemmabench"
version = "0.0"
description = "Package for benching stemmatology algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
dependencies = [
  "loguru==0.6.0",
  "pydantic==1.9.1",
  "PyYAML==6.0",
  "typer==0.4.1",
  "wheel==0.41.0",
  "numpy==1.25.2",
  "scipy==1.11.1",
  "collatex==2.2",
  "graphviz==0.20.1",
  "nltk==3.5",
  "textdistance==4.5.0",
  "Levenshtein==0.21.1",
]

[project.scripts]
generate = "stemmabench.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov[all]", "pylint==2.14.5"]
